bug: added axis lables alignment

--- a/style.css
+++ b/style.css
@@ -51,7 +51,9 @@ nav > a:hover {
   height: 40vh;
   margin: 20px auto;
   display: grid;
-  grid-template: repeat(12, 1fr) / repeat(12, 1fr);
+  grid-template-columns: 30px repeat(12, 1fr);
+  /* 1st row for numbers, then 12 equal board cells */
+  grid-template-rows: 30px repeat(12, 1fr);  
   gap: 2px;
   border: #e9ecef 2px solid;
 }
@@ -76,6 +78,24 @@ nav > a:hover {
   background-color: #1fdc12; 
 }
 
+
+/* x axis labels */
+.number-label {
+  grid-row: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #333;
+}
+
+/* y axis labels */
+.letter-label {
+  grid-column: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #333;
+}
 
 
 .hit-cell {
